@@ -1,3 +1,7 @@
+2013-10-06 Harri Pitkänen <hatapitk@iki.fi>
+	* Configuration option "Check capitalization" was removed in
+	  LibreOffice 4.0, no need to support it anymore.
+
 2013-09-17 Harri Pitkänen <hatapitk@iki.fi>
 	* Support more languages for LibreOffice.
 
